Mon Mar  8 18:27:26 MET 1999 hannes
  * access to coeff-description via functions (1. approach)
    (rChar,  rInternalChar, rField_is_Zp, rField_is_Q,
     rField_is_R, rField_is_GF, rField_is_Zp_a, rField_is_Q_a,
     rField_has_simple_inverse)

Wed Dec 16 16:02:07 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

        * clapsing.cc: debugging output modified

Thu Oct 22 14:21:17 MEST 1998 <krueger@mathematik.uni-kl.de>
        * tesths.cc,subexpr.h,subexpr.cc,ipshell.h,ipshell.cc,iplib.cc
        * ipid.h,ipid.cc,ipassign.cc,iparith.cc
          - Added assignment <package>=<package> via ref-counter
            rewriten killhdl for packages
          - Added libname,language to packages
          - exportto(Up,...) 'Up' defined in syMake
          - listvar() shows toplevel-packages too.

Mon Oct 19 16:01:18 MESZ 1998 hannes
* hannes: limitations on length of arguments removed (was 200 chars)
  (iplib.cc)

Thu Oct 15 15:54:05 MEST 1998 <krueger@mathematik.uni-kl.de>
        * extra.cc,grammar.y,ipid.cc,ipid.h,iplib.cc,ipshell.cc
        * ipshell.h,ring.cc,structs.h,tesths.cc,mod2.h.in
          Replaced ring *iiLocalRing[] by a stack (class namerec)
          To use old method define USE_IILOCALRING in mod2.h
          Old method incompatible with HAVE_NAMESPACES!

1998-10-14  Olaf Bachmann  <obachman@mathematik.uni-kl.de>

        * sing_mp.cc (slOpenMPLaunch): added slKill as link function
        * added --MPrsh to slOpenLaunch

Wed Jul  1 15:25:23 MET DST 1998 hannes:
* fixed bug with quotient: M:module(0) returns (1), not ([1])

Tue Jun 30 18:30:02 1998  Jens Schmidt  <schmidt@mathematik.uni-kl.de>

        * claptmp.cc (tmax, tmin(Var, Var)): instantiations added

Fri Jun 19 10:01:59 MET DST 1998 hannes
* hannes: changed back: quot is now from standard.lib,
                        quotient the C-version
                        (iparith.cc LIB/standard.lib)

Thu Jun 18 19:27:27 MET DST 1998 hannes